simple Uppy DnD React integration example
thanks Marius

--- a/example/index.html
+++ b/example/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>uppy</title>
+    <link href="uppy.min.css" rel="stylesheet">
   </head>
   <body>
     <h1>Uppy is here</h1>
@@ -16,17 +17,18 @@
       </form>
     </div>
 
-    <link href="uppy.min.css" rel="stylesheet">
+    <div id="uppy"></div>
+
     <script src="bundle.js"></script>
 
     <!--script src="uppy.min.js"></script-->
-    <script>
+<!--     <script>
       // console.log(Uppy)
       // var uppy = new Uppy.Core({locales: Uppy.locales.ru_RU, debug: true})
       //   .use(Uppy.Dashboard, {trigger: '#uppyModalOpener'})
       //   .use(Uppy.Dummy, {target: Uppy.Dashboard})
       //   .run();
       // document.querySelector('#uppyModalOpener').click()
-    </script>
+    </script> -->
   </body>
 </html>
