trying on Preact + hyperx instead of yo-yo

--- a/example/index.html
+++ b/example/index.html
@@ -9,11 +9,17 @@
     <h1>Uppy is here</h1>
     <button id="uppyModalOpener">Open Modal</button>
 
-    <div class="Uppy">
+    <div class="Uppy">123</div>
+
+    <!-- <div class="Uppy">
       <form class="UppyForm" action="/">
         <input type="file" />
         <button type="submit">Upload</button>
       </form>
+    </div> -->
+
+    <div id="myUploadContainer" style="width: 300px; height: 300px;">
+
     </div>
 
     <link href="uppy.min.css" rel="stylesheet">
