more React + UppyDashboard experiments

--- a/example/index.html
+++ b/example/index.html
@@ -8,16 +8,16 @@
   </head>
   <body>
     <h1>Uppy is here</h1>
-    <button id="uppyModalOpener">Open Modal</button>
+    <!-- <button id="uppyModalOpener">Open Modal</button>
 
     <div class="Uppy">
       <form class="UppyForm" action="/">
         <input type="file" />
         <button type="submit">Upload</button>
       </form>
-    </div>
+    </div> -->
 
-    <div id="uppy"></div>
+    <div id="uppyReact"></div>
 
     <script src="bundle.js"></script>
 
